Fix: Change background color for being a more darker contrast behind elements

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-color: #8389a5;
+    background-color: #708090;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
